--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,9 @@
         "dest": "index.js"
       }
     ],
-    "headers":[
+    "headers": [
       {
-        "source": "/api/(.*)",
+        "source": "/(.*)",
         "headers": [
           { "key": "Access-Control-Allow-Credentials", "value": "true" },
           { "key": "Access-Control-Allow-Origin", "value": "*" },
